[package]
name = "neotest_macros"
version = "0.0.1"
edition = "2021"
categories = ["development-tools::testing"]
description = """
An implementation-crate for the `neotest` testing library.
This provides the definitions for the procedural macros that are the backbone
of the testing library.
"""
authors = ["Matthew Rodusek <7519129+bitwizeshift@users.noreply.github.com>"]
repository = "https://github.com/bitwizeshift/neotest"
homepage = "https://github.com/bitwizeshift/neotest"
documentation = "https://bitwizeshift.github.io/neotest/neotest"
keywords = ["test", "testing", "xunit", "fixture", "proc-macros"]
license = "MIT / Apache-2.0"
readme = "README.md"

[lib]
name = "neotest_macros"
test = true
proc-macro = true

[features]
default = []

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }
neotest_common = { version = "^0.0.1", path = "../neotest-common" }

[dev-dependencies]
