[package]
name = "neotest"
version = "0.0.1"
edition = "2021"
categories = ["development-tools::testing"]
description = """
Rust xUnit testing framework leveraging procedural macros to allow for
fixture-based and parameterized testing.
"""
authors = ["Matthew Rodusek <7519129+bitwizeshift@users.noreply.github.com>"]
repository = "https://github.com/bitwizeshift/neotest"
homepage = "https://github.com/bitwizeshift/neotest"
documentation = "https://bitwizeshift.github.io/neotest/neotest"
keywords = ["test", "testing", "xunit", "fixture", "proc-macros"]
license = "MIT / Apache-2.0"
readme = "README.md"

[lib]
test = true
examples = true

[features]
default = []

[dependencies]
neotest_macros = { version = "^0.0.1", path = "../neotest-macros"}
neotest_common = { version = "^0.0.1", path = "../neotest-common"}

[dev-dependencies]
